Fix cropped page content on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,12 @@ html {
   padding-bottom: 80px;
 }
 
+@media (max-width: 767px) {
+  html {
+    padding-bottom: 145px;
+  }
+}
+
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
